--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,6 +7,7 @@ PYTHONDONTWRITEBYTECODE = '1'
 PYTHONFAULTHANDLER = '1'
 PYTHONHASHSEED = 'random'
 PYTHONUNBUFFERED = '1'
+
 [phases.install]
 dependsOn = ['setup']
 cmds = ['python -m venv --copies /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt && npm install']
@@ -27,4 +28,4 @@ nixOverlays = []
 nixpkgsArchive = 'bf446f08bff6814b569265bef8374cfdd3d8f0e0'
 
 [start]
-cmd = 'npx tailwindcss -i ./static/src/input.css -o ./static/src/output.css &&  python manage.py collectstatic --no-input --clear && python manage.py migrate && gunicorn core.wsgi'
+cmd = 'python manage.py collectstatic --no-input --clear && python manage.py migrate && gunicorn core.wsgi'
